Correções para funcionamento no java 10 - parcial.